removed failed cloud attempt, fixed reviews not showing in home page and fixed image in review

--- a/website/static/styles/index.css
+++ b/website/static/styles/index.css
@@ -554,8 +554,8 @@ footer {
 }
 
 .review_user_picture {
-  width: 150px;
-  height: 150px;
+  width: 7vw !important;
+  height: 7vw !important;
   border-radius: 50%;
   border: #333 5px solid;
   box-shadow: rgba(51, 51, 51, 0.4) 4px 4px 4px;
